--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div class="body"></div>
+	<h1 class="black">HELLO MEN</h1>
 </body>
 <script type="text/javascript" src='bundle.js'></script>
 </html>
